# Twikit

./: .gitignore  README.md  pyproject.toml  run.py
scraped/: account.json  date.json  hashtag.json  keyword.json
twitter_login/: __init__.py  auth_manager.py  client.py  enums.py  errors.py  headers.py  http.py  pagination.py  parsers.py  utils.py
twitter_login/api/: gql.py
twitter_login/gql_endpoints/: data.py  endpoint.py
twitter_login/models/: __init__.py  lazy.py  tweet.py  user.py
